# propositional-logic-evaluator

./: .gitignore  main.hs  pleh.cabal  propositional-logic-evaluator.cabal
app/: Main.hs
src/: Logic.hs
