cabal-version:      3.12
name:               propositional-logic-evaluator
version:            0.1.0.0
license:            BSD-2-Clause
author:             gusutabo
maintainer:         gustavolinssm@gmail.com
build-type:         Simple
extra-doc-files:    README.md
common warnings
    ghc-options: -Wall
executable propositional-logic-evaluator
    import:           warnings
    main-is:          Main.hs
    other-modules:    Logic
    other-extensions: NoRebindableSyntax CPP
    build-depends:    base ^>=4.20.2.0
    hs-source-dirs:   app, src
    default-language: Haskell2010